@@ -60,3 +60,10 @@ Sat Oct 23 10:03:02 PDT 1999
 (Mandrake)
 
 Added patch from horms (horms@valinux.com) to allow you to remove popup entries
+
+-------------------------------------------------------------------------------
+
+Sat Oct 23 21:00:30 PDT 1999
+(Mandrake)
+
+Second patch from horms about popup entry removal
